# ai-dev-kit

./: .gitignore  README.md
.claude/: .mcp.json
ai-dev-project/: .gitignore  CLAUDE.md  README.md
ai-dev-project/.cursor/: mcp.json
databricks-builder-app/client/src/pages/: ProjectPage.tsx
databricks-builder-app/server/: app.py
databricks-builder-app/server/routers/: agent.py
databricks-mcp-core/: README.md  pyproject.toml
databricks-mcp-core/databricks_mcp_core/spark_declarative_pipelines/: pipelines.py
databricks-mcp-core/databricks_mcp_core/sql/: __init__.py  table_stats.py  warehouse.py
databricks-mcp-core/databricks_mcp_core/sql/sql_utils/: __init__.py  executor.py  models.py  parallel_executor.py  table_stats_collector.py
databricks-mcp-core/tests/: __init__.py  conftest.py
databricks-mcp-core/tests/integration/sdp/: test_pipelines.py
databricks-mcp-core/tests/integration/sql/: test_sql.py  test_table_stats.py  test_warehouse.py
databricks-mcp-server/: README.md  pyproject.toml
databricks-mcp-server/databricks_mcp_server/: message_handler.py  server.py  stdio_server.py
databricks-mcp-server/databricks_mcp_server/tools/: agent_bricks.py  aibi_dashboards.py  pipelines.py
databricks-skills/: install_skills.sh
databricks-skills/agent-bricks/: 2-genie-spaces.md
databricks-skills/sdp/: SKILL.md  dlt-migration-guide.md  ingestion-patterns.md  performance-tuning.md  python-api-versions.md  scd-query-patterns.md  streaming-patterns.md
databricks-skills/spark-declarative-pipelines/: 1-ingestion-patterns.md
